--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,6 @@
-== README
+== Workout
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+{<img src="https://codeclimate.com/github/mcelaney/workout/badges/gpa.svg" />}[https://codeclimate.com/github/mcelaney/workout]
 
-Things you may want to cover:
+{<img src="https://codeclimate.com/github/mcelaney/workout/badges/coverage.svg" />}[https://codeclimate.com/github/mcelaney/workout]
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
