Added badge for PullRequest

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,7 @@
 == Workout
 
-{<img src="https://codeclimate.com/github/mcelaney/workout/badges/gpa.svg" />}[https://codeclimate.com/github/mcelaney/workout] {<img src="https://codeclimate.com/github/mcelaney/workout/badges/coverage.svg" />}[https://codeclimate.com/github/mcelaney/workout] {<img src="https://semaphoreapp.com/api/v1/projects/761f814e-2917-484a-be62-370483c9d182/289046/shields_badge.svg" />}[https://semaphoreapp.com/mcelaney/workout]
+{<img src="https://codeclimate.com/github/mcelaney/workout/badges/gpa.svg" />}[https://codeclimate.com/github/mcelaney/workout] {<img src="https://codeclimate.com/github/mcelaney/workout/badges/coverage.svg" />}[https://codeclimate.com/github/mcelaney/workout] {<img src="https://semaphoreapp.com/api/v1/projects/761f814e-2917-484a-be62-370483c9d182/289046/shields_badge.svg" />}[https://semaphoreapp.com/mcelaney/workout] {<img src="https://www.pullreview.com/github/mcelaney/workout/badges/master.svg?" />}[https://www.pullreview.com/github/mcelaney/workout/reviews/master]
+
 
 == What am I?
 This is a toy app to demonstrate some Ruby/Rails concepts. The idea is that you would log in, give some information about various exercises and/or goals, and be given workouts to perform.
